objects/salesedgedemo__LDFilter__c.object
<CustomObject>
    <description>Lead Deck Filter object to house criteria</description>
    <fields>
        <fullName>salesedgedemo__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>user that owns this filter</description>
        <inlineHelpText>user that owns this filter</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Deck_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__assignedToAllUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field for determining if the &quot;all&quot; tag should be true in Cassandra</description>
        <label>Assigned to All Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__criteriaHash__c</fullName>
        <description>hash of the criteria array in a LDFilter</description>
        <externalId>true</externalId>
        <label>Criteria Hash</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__criteria__c</fullName>
        <description>logical expression of criteria</description>
        <label>Criteria</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__defaultFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean to determine whether this is this a default filter</description>
        <inlineHelpText>boolean to determine whether this is this a default filter</inlineHelpText>
        <label>Default Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__displayMode__c</fullName>
        <description>the mode of the card to determine what should be displayed as the source of the card</description>
        <inlineHelpText>the mode of the card to determine what should be displayed as the source of the card</inlineHelpText>
        <label>Display Mode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__pardotOwnerId__c</fullName>
        <description>Field for the corresponding pardot user</description>
        <label>Pardot Owner ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__showNotifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean to determine whether notifications should be shown on the desktop version</description>
        <inlineHelpText>boolean to determine whether notifications should be shown on the desktop version</inlineHelpText>
        <label>Show Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__title__c</fullName>
        <description>title of the filter</description>
        <inlineHelpText>title of the filter</inlineHelpText>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lead Deck Filter</label>
    <listViews>
        <fullName>salesedgedemo__All</fullName>
        <columns>salesedgedemo__title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>salesedgedemo__criteriaHash__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>lead deck filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Deck Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>